<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Zone</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up_here">Haven\'t registered yet? Click here</string>
    <string name="signup_first_name">First Name</string>
    <string name="signup_last_name">Last Name</string>
    <string name="sign_up_confirm_password">Confirm Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in_here">Already have an account? Sign In</string>
    <string name="enter_valid_user_name">Please enter valid user name</string>
    <string name="enter_valid_name">Please enter valid name</string>
    <string name="enter_password">Please enter a password</string>
    <string name="enter_valid_password">Please enter a valid password</string>
    <string name="name_regex">^[A-Za-z]*$</string>
    <string name="user_name_regex" tools:ignore="TypographyDashes">^[a-zA-Z0-9._-]+@[a-zA-Z0-9.-]+.[a-zA-Z]{2,}$</string>
    <string name="confirm_password">Please confirm password</string>
    <string name="passwords_mismatch">Passwords don\'t match</string>
    <string name="signIn">SignIn</string>
    <string name="signUp">SignUp</string>
    <string name="text_or">or</string>
    <string name="date">dd-MM-yyyy</string>
    <string name="image">image</string>
    <string name="drawable">drawable</string>
    <string name="zone_cooking">Cooking</string>
    <string name="zone_football">Football</string>
    <string name="zone_news">News</string>
    <string name="zone_fitness">Fitness</string>
    <string name="zone_music">Music</string>
    <string name="zone_acting">Acting</string>
    <string name="zone_talent">Talent</string>
    <string name="zone_games">Games</string>
    <string name="zone_trader">Trader</string>
    <string name="football_data_base_url">http://192.169.1.8:61000/</string>
    <string name="feed_data_base_url">http://192.169.1.8:62735/</string>
    <string name="base_url">https://111.93.140.199:5003</string>
    <string name="secret_code">SECRET CODE</string>
    <string name="share_secret_code">GIVE THIS CODE TO YOUR FRIENDS</string>
    <string name="login_pref">loginPrefs</string>
    <string name="shared_pref_save_login">save_login</string>
    <string name="shared_pref_username">Username</string>
    <string name="shared_pref_password">Password</string>
    <string name="points_game">Points</string>
    <string name="league_name_plank">PLANK LEAGUE</string>
    <string name="match_vs">VS</string>
    <string name="round_label">ROUND</string>
    <string name="enter_code_label">ENTER CODE</string>
    <string name="advance_label">ADVANCE</string>
    <string name="user_label">USER</string>
    <string name="points_label">POINTS</string>
    <string name="result">RESULT</string>
    <string name="result_won">WON</string>
    <string name="result_lost">LOST</string>
    <string name="game_type">Game Type</string>
    <string name="sudden_death_game">Survivor</string>
    <string name="backslash">/</string>
    <string name="login_successful">Login Successful</string>
    <string name="invalid_credentials">Invalid login credentials</string>
    <string name="login_failed_message">Login Failed</string>
    <string name="server_unreachable_message">Server Unreachable</string>
    <string name="logout_label">Logout</string>
    <string name="confirm_logout">Are you sure you want to logout?</string>
    <string name="sign_up_successful">Signup Successful</string>
    <string name="user_exists">User name already exists</string>
    <string name="signup_failed_message">Signup failed, please retry</string>
    <string name="not_found_error">HTTP 404 Not Found</string>
    <string name="invalid_invitation_code">Invalid invitation code</string>
    <string name="facebook_app_id">575013552837571</string>
    <string name="facebook_string">Facebook</string>
    <string name="facebook_login_failed">Facebook Login Failed</string>
    <string name="intent_type">text/plain</string>
    <string name="whatsapp_intent">com.whatsapp</string>
    <string name="app_link">https://play.google.com/store/apps/details?id=life.plank.juna.zone</string>
    <string name="share_app_link">Share app link via</string>
    <string name="app_icon_path">android.resource://life.plank.juna.zone/mipmap/ic_launcher</string>
    <string name="intent_image_type">imageUrl/*</string>
    <string name="instagram_base_url">https://api.instagram.com/</string>
    <string name="instagram_client_id">c16a21f7be6241629eca1e328d13ad2c</string>
    <string name="instagram_redirect_url">https://www.plank.life</string>
    <string name="instagram_login_failed">Instagram Login Failed</string>
    <string name="instagram_string">Instagram</string>
    <string name="client_id_query_param">oauth/authorize/?client_id=</string>
    <string name="redirect_uri_query_param"><![CDATA[&redirect_uri=]]></string>
    <string name="response_type_query_param"><![CDATA[&response_type=token]]></string>
    <string name="display_scope_query_param"><![CDATA[&display=touch&scope=public_content]]></string>
    <string name="access_token_query_param">#access_token=</string>
    <string name="error_query_param">\?error</string>
    <string name="twitter_string">Twitter</string>
    <string name="twitter_consumer_key">kphebVDuwmd7RvDevLXm7DIJC</string>
    <string name="twitter_consumer_secret">hmthoJvRsNNK7AngK6V8d4gfIxHZeCKgcrJoLtGxgeOyAD0CB8</string>
    <string name="twitter_login_failed">Twitter Login Failed</string>
    <string name="google_string">Google</string>
    <string name="pick_label">PICK</string>
    <string name="youre_label">YOU\'RE</string>
    <string name="result_string">Result</string>
    <string name="right_label">RIGHT</string>
    <string name="wrong_label">SO WRONG</string>
    <string name="selected_team">Selected Team</string>
    <string name="property_type">rotationY</string>
    <string name="pick_club_label">PICK YOUR CLUB</string>
    <string name="club_image_name">clubImageName</string>
    <string name="azure_base_url">https://junadevapp.azurewebsites.net/</string>
    <string name="position">position</string>
    <string name="second_position">2</string>
    <string name="comment_data">Lorem Ipsum is simply dummy text of the printing and typesetting industries. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s.</string>
    <string name="feed_content_title"> Lorem Ipsum is simply dummy text of the printing and typesetting industries. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="feed_content_subtitle">It is a long established fact that a reader will be distracted by the readable content of page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using making it look like readable English.Of life, is the football interdumSed warm-up ornare justo eleifend nibh interdum.Proin maximu, ie, a consectetur lorem ultrices, small business that does not invest in sapien.Phasellus sapiensit sometimes mainstream except loborits, condimentum.Suspendisse accumsan dui nibh dui mi, vel ut diam maximumipsum law enforcement porta.Suspendisse sapien.Duis need the jaws of Liua button, the neicutur felis eleifend a, the ends of the est.Proin feugiatsollicuitudin feugiat.Etiam blandit Cras sit amet euismod accumasan him or his</string>
    <string name="unfollow">UNFOLLOW</string>
    <string-array name="calendar_array">
        <item>Today</item>
        <item>Yesterday</item>
        <item>Last Weekend</item>
        <item>Last Week</item>
        <item>Last Month</item>
        <item>Pick a date</item>
        <item>Calendar</item>
    </string-array>
    <string-array name="football_filter_array">
        <item>All</item>
        <item>My Pundits</item>
        <item>Fixtures/Results</item>
        <item>Standings</item>
        <item>Matches</item>
    </string-array>
    <string-array name="football_feed_popup_array">
        <item>PIN POST</item>
        <item>HIDE POST</item>
        <item>UNFOLLOW</item>
        <item>NOTIFICATION/ON</item>
        <item>SHARE</item>
    </string-array>
    <string name="team_selection_dialog_text">You can personalize your content by selecting upto three teams to follow. Start typing the names below:</string>
    <string name="register_dialog_text">Register with us and save your selection. You can read our Privacy Policy here.</string>
    <string name="you_can_register_with">Or you can also register with:</string>
    <string name="register_and_save">Register and save</string>
    <string name="team_one">Team One</string>
    <string name="team_two">Team Two</string>
    <string name="team_three">Team Three</string>
    <string name="apply">Apply</string>
    <string name="email">Email</string>
    <string name="country">Country</string>
    <string name="back">BACK</string>
    <string name="tottenham_angels">Tottenham Angels</string>
    <string name="saved_message">Image Saved to Gallery</string>
    <string name="image_name">IMG_</string>
    <string name="extention">.jpg</string>
    <string name="set_image_type">imageUrl/*</string>
    <string name="child_parameter">Pictures</string>
    <string name="date_format">yyyyMMdd_HHmmss</string>
    <string name="button_gallery">Open Gallery  !</string>
    <string name="button_camera">Take a picture!</string>
    <string name="live_zone_previous_match">PREVIOUS</string>
    <string name="live_zone_next_match">NEXT</string>
    <string name="add_comment">Add Comment</string>
    <string name="photos_videos">PHOTOS/VIDEOS</string>
    <string name="stickers">STICKERS</string>
    <string name="gifs">GIFS</string>
    <string name="meme_maker">MEME MAKER</string>
    <string name="serial_number">1</string>
    <string name="my_team">My Team</string>
    <string name="burnley_fc">Burnley FC</string>
    <string name="liverpool">LiverPool</string>
    <string name="sun_11_13">Sun, 11/13</string>
    <string name="ft">FT</string>
    <string name="team_played">MP</string>
    <string name="team_won">W</string>
    <string name="team_draw">D</string>
    <string name="goal_for">GF</string>
    <string name="goal_Against">GA</string>
    <string name="goal_difference">GD</string>
    <string name="points_table">Pts</string>
    <string name="cr7_lover">CR7_lover</string>
    <string name="created_2_weeks_ago">Created 2 weeks ago</string>
    <string name="cristiano_ronaldo_top_10_unimaginable_goals">Cristiano Ronaldo Top 10 Unimaginable Goals</string>
    <string name="feed_discription">Cristiano Ronaldo top 10 goals list vs Atletico Madrid-crazy freekick, Osasuna-crazy rocket shot, Portsmouth-magical left foot roc…</string>
    <string name="dummy_text">PikaPerfect He\'s not human, he is the best player in the world ⚽️ Isn\'t that right Messi﻿?</string>
    <string name="view_3_replies">View 3 replies</string>
    <string name="_1_4m">1.4M</string>
    <string name="_16_2m">16.2M</string>
    <string name="like">Like</string>
    <string name="reply">Reply</string>
    <string name="view_all_comments">View all comments</string>
    <string name="post">Post</string>
    <string name="wins">Wins</string>
    <string name="losses">Losses</string>
    <string name="goals">Goals</string>
    <string name="team_losses">L</string>
</resources>