<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/score_board_liner_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="horizontal"
    android:padding="10dp"
    android:weightSum="8.7">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".3"
        android:gravity="center_horizontal"
        android:text="@string/serial_number"
        android:textColor="@color/black"
        android:visibility="invisible" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_weight=".7"
        android:src="@drawable/ic_west_brom_logo"
        android:visibility="invisible" />

    <TextView
        style="@style/standing_fragment_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_weight="3"
        android:gravity="start"
        android:singleLine="true"
        android:text="@string/my_team"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/wins"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/losses"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/goals"
        android:textColor="@color/black" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="341"
        android:textColor="@color/black" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="341"
        android:textColor="@color/black" />

</LinearLayout>