<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/linear_card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp">

        <android.support.v7.widget.CardView
            android:id="@+id/cardview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:lineSpacingExtra="5sp"
                    android:padding="5dp"
                    android:text="@string/cr7_lover"
                    android:textColor="@color/grey"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:gravity="start"
                    android:lineSpacingExtra="5sp"
                    android:padding="8dp"
                    android:text="@string/created_2_weeks_ago"
                    android:textColor="@color/grey"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:padding="8dp"
                    android:src="@drawable/ic_like" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="end"
                    android:lineSpacingExtra="5sp"
                    android:text="@string/_1_4m"
                    android:textColor="@color/grey"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:gravity="end"
                    android:padding="8dp"
                    android:src="@drawable/ic_like" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:gravity="start"
                    android:lineSpacingExtra="5sp"
                    android:text="@string/_16_2m"
                    android:textColor="@color/grey"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_fourth_dummy" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="1sp"
                        android:padding="3dp"
                        android:text="@string/cristiano_ronaldo_top_10_unimaginable_goals"
                        android:textColor="@color/grey"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="30dp"
                        android:background="@color/grey" />

                    <ImageView
                        android:id="@+id/image_download"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_downward_black_24dp" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="30dp"
                        android:background="@color/grey" />

                    <ImageView
                        android:id="@+id/image_Upload"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_downward_black_24dp" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="30dp"
                        android:background="@color/grey" />

                    <ImageView
                        android:id="@+id/image_forward"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_downward_black_24dp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="3sp"
                    android:text="@string/feed_discription"
                    android:textColor="@color/grey"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="5sp"
                    android:padding="5dp"
                    android:text="@string/dummy_text"
                    android:textColor="@color/grey"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="5sp"
                        android:padding="15dp"
                        android:text="@string/like"
                        android:textColor="@color/grey"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="5sp"
                        android:padding="15dp"
                        android:text="@string/reply"
                        android:textColor="@color/grey"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="5sp"
                        android:text="@string/view_3_replies"
                        android:textColor="@color/grey"
                        android:textSize="12sp" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="5sp"
                    android:padding="5dp"
                    android:text="@string/view_all_comments"
                    android:textColor="@color/grey"
                    android:textSize="12sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <EditText
                        android:id="@+id/edit_comment"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.85"
                        android:hint="@string/add_comment" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.15"
                        android:gravity="end"
                        android:lineSpacingExtra="5sp"
                        android:text="@string/post"
                        android:textColor="@color/dark_sky_blue"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </RelativeLayout>
</RelativeLayout>