<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/chat_header_background"
    android:padding="16dp"
    tools:context="life.plank.juna.zone.view.fragment.MediaSelectionFragment">

    <TextView
        android:id="@+id/photos_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/photos_videos"
        android:textColor="@color/dark_grey"
        android:background="@color/white"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/stickers_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/photos_text_view"
        android:padding="5dp"
        android:paddingStart="8dp"
        android:text="@string/stickers"
        android:textColor="@color/white"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/gifs_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@+id/stickers_text_view"
        android:padding="5dp"
        android:text="@string/gifs"
        android:textColor="@color/white"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/meme_maker_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/close_image_view"
        android:background="@drawable/custom_text_view_background"
        android:gravity="end"
        android:padding="5dp"
        android:text="@string/meme_maker"
        android:textColor="@color/white"
        android:textSize="10sp" />

    <ImageView
        android:id="@+id/close_image_view"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentEnd="true"
        android:padding="5dp"
        android:src="@drawable/ic_close" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/media_container_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/photos_text_view"
        android:background="@color/white" />

</RelativeLayout>
